replaced List.of with Arrays.asList to comply with 210-bot java 8